# sfPaint

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_compile_line.sh  imgui.ini
.cache/clangd/index/: main.cpp.E6757B3B98743380.idx
src/: brush.cpp  brush.hpp  config.txt  lineTool.cpp  lineTool.hpp  main.cpp  recTool.cpp  recTool.hpp
src/tools/: CMakeLists.txt  Copy.cpp  Fill.cpp  Fill.hpp  Pen.cpp  Pen.hpp  Pipet.cpp  Pipet.hpp  SFML-Includes.hpp  Tool.cpp  Tool.hpp
src/utils/: general.cpp  general.hpp  imfilebrowser.h
